# ai_chat_assistant

./: .gitignore  CORRECTION_FINALE_JS.md  IMPROVEMENTS_GUIDE.md  INSTALLATION_SUCCESS.sh  JAVASCRIPT_FIX_GUIDE.md  LICENSE  QUESTION_RESPONSE_MATCHING.md  README.md  README_Multilingual.md  RESOLUTION_COMPLETE.md  RESOLUTION_FINALE.md  SOLUTION_MULTILINGUE.md  SOLUTION_REPONSES_PRECISES.md  TROUBLESHOOTING.md  __manifest__.py  examples.py  install_guide.sh  pyproject.toml  requirements.txt  test_database_sync.py  test_getStaticAIResponse_fix.html  test_installation.py  test_javascript_fix.html  test_language_response.py  test_module_syntax.py  test_multilingual.py  test_multilingual_responses.html  test_multilingual_validation.py  test_question_response_matching.py  validate_installation.py  validate_module.py
ai_chat_assistant/: __init__.py  chatbot.py  conversation.py  main.py  requirements-test.txt
ai_chat_assistant/tests/: test_controllers.py  test_models.py
controllers/: main.py
data/: ai_responses_data.xml  demo_knowledge_base.xml  fallback_database_entries.xml  knowledge_base_data.xml  multilingual_responses_data.xml  specific_questions_data.xml  specific_responses_data.xml
models/: __init__.py  ai_chat_message.py  ai_knowledge_base.py  chat_models.py
security/: ir.model.access.csv
static/src/css/: chatbot.css
static/src/js/: chatbot.js
tests/: __init__.py  test_chatbot.py
views/: chatbot_injection.xml  chatbot_templates.xml  chatbot_views.xml  marketing_dashboard.xml
